Writing table as parquet files